--- a/ALU_Lab1_3710.qsf
+++ b/ALU_Lab1_3710.qsf
@@ -55,11 +55,16 @@ set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
-set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH tb_ALU_BO -section_id eda_simulation
+set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH tb_ALU -section_id eda_simulation
 set_global_assignment -name VERILOG_FILE ALU.v
 set_global_assignment -name VERILOG_FILE tb_ALU_BO.v
 set_global_assignment -name EDA_TEST_BENCH_NAME tb_ALU_BO -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id tb_ALU_BO
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME tb_ALU_BO -section_id tb_ALU_BO
-set_global_assignment -name EDA_TEST_BENCH_FILE tb_ALU_BO.v -section_id tb_ALU_BO
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name VERILOG_FILE tb_ALU.v
+set_global_assignment -name EDA_TEST_BENCH_FILE tb_ALU_BO.v -section_id tb_ALU_BO
+set_global_assignment -name EDA_TEST_BENCH_NAME tb_ALU -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id tb_ALU
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME tb_ALU -section_id tb_ALU
+set_global_assignment -name EDA_TEST_BENCH_FILE tb_ALU.v -section_id tb_ALU
