--- a/ALU_Lab1_3710.qsf
+++ b/ALU_Lab1_3710.qsf
@@ -38,7 +38,7 @@
 
 set_global_assignment -name FAMILY "Cyclone V"
 set_global_assignment -name DEVICE 5CSEMA5F31C6
-set_global_assignment -name TOP_LEVEL_ENTITY ALU
+set_global_assignment -name TOP_LEVEL_ENTITY ALU_wrapper
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 18.1.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "16:50:37  AUGUST 31, 2021"
 set_global_assignment -name LAST_QUARTUS_VERSION "18.1.0 Lite Edition"
@@ -49,22 +49,46 @@ set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 256
 set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (Verilog)"
 set_global_assignment -name EDA_TIME_SCALE "1 ps" -section_id eda_simulation
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT "VERILOG HDL" -section_id eda_simulation
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
 set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH tb_ALU_BO -section_id eda_simulation
-set_global_assignment -name VERILOG_FILE ALU.v
-set_global_assignment -name VERILOG_FILE tb_ALU_BO.v
 set_global_assignment -name EDA_TEST_BENCH_NAME tb_ALU_BO -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id tb_ALU_BO
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME tb_ALU_BO -section_id tb_ALU_BO
-set_global_assignment -name VERILOG_FILE tb_ALU.v
 set_global_assignment -name EDA_TEST_BENCH_NAME tb_ALU -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id tb_ALU
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME tb_ALU -section_id tb_ALU
 set_global_assignment -name EDA_TEST_BENCH_FILE tb_ALU_BO.v -section_id tb_ALU_BO
 set_global_assignment -name EDA_TEST_BENCH_FILE tb_ALU.v -section_id tb_ALU
+set_global_assignment -name VERILOG_FILE ALU_wrapper.v
+set_global_assignment -name VERILOG_FILE ALU.v
+set_global_assignment -name VERILOG_FILE tb_ALU_BO.v
+set_global_assignment -name VERILOG_FILE tb_ALU.v
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_location_assignment PIN_AE12 -to data_input[9]
+set_location_assignment PIN_AD10 -to data_input[8]
+set_location_assignment PIN_AC9 -to data_input[7]
+set_location_assignment PIN_AE11 -to data_input[6]
+set_location_assignment PIN_AD12 -to data_input[5]
+set_location_assignment PIN_AD11 -to data_input[4]
+set_location_assignment PIN_AF10 -to data_input[3]
+set_location_assignment PIN_AF9 -to data_input[2]
+set_location_assignment PIN_AC12 -to data_input[1]
+set_location_assignment PIN_AB12 -to data_input[0]
+set_location_assignment PIN_Y16 -to ld_op_code
+set_location_assignment PIN_W15 -to ld_src
+set_location_assignment PIN_AA15 -to ld_dest
+set_location_assignment PIN_Y21 -to Out[15]
+set_location_assignment PIN_W21 -to Out[14]
+set_location_assignment PIN_W20 -to Out[13]
+set_location_assignment PIN_Y19 -to Out[12]
+set_location_assignment PIN_W19 -to Out[11]
+set_location_assignment PIN_W17 -to Out[10]
+set_location_assignment PIN_V18 -to Out[9]
+set_location_assignment PIN_V17 -to Out[8]
+set_location_assignment PIN_W16 -to Out[7]
+set_location_assignment PIN_V16 -to Out[6]
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
