Updated wrapper and pin planner
ALU now works on the board except for not and ARSH.

--- a/ALU_Lab1_3710.qsf
+++ b/ALU_Lab1_3710.qsf
@@ -81,14 +81,37 @@ set_location_assignment PIN_AB12 -to data_input[0]
 set_location_assignment PIN_Y16 -to ld_op_code
 set_location_assignment PIN_W15 -to ld_src
 set_location_assignment PIN_AA15 -to ld_dest
-set_location_assignment PIN_Y21 -to Out[15]
-set_location_assignment PIN_W21 -to Out[14]
-set_location_assignment PIN_W20 -to Out[13]
-set_location_assignment PIN_Y19 -to Out[12]
-set_location_assignment PIN_W19 -to Out[11]
-set_location_assignment PIN_W17 -to Out[10]
-set_location_assignment PIN_V18 -to Out[9]
-set_location_assignment PIN_V17 -to Out[8]
-set_location_assignment PIN_W16 -to Out[7]
-set_location_assignment PIN_V16 -to Out[6]
+set_location_assignment PIN_V25 -to out1[0]
+set_location_assignment PIN_W25 -to out2[6]
+set_location_assignment PIN_AA28 -to out1[1]
+set_location_assignment PIN_Y27 -to out1[2]
+set_location_assignment PIN_AB27 -to out1[3]
+set_location_assignment PIN_AB26 -to out1[4]
+set_location_assignment PIN_AA26 -to out1[5]
+set_location_assignment PIN_AA25 -to out1[6]
+set_location_assignment PIN_AA24 -to out2[0]
+set_location_assignment PIN_Y23 -to out2[1]
+set_location_assignment PIN_Y24 -to out2[2]
+set_location_assignment PIN_W22 -to out2[3]
+set_location_assignment PIN_W24 -to out2[4]
+set_location_assignment PIN_V23 -to out2[5]
+set_location_assignment PIN_AD26 -to out3[0]
+set_location_assignment PIN_AC27 -to out3[1]
+set_location_assignment PIN_AD25 -to out3[2]
+set_location_assignment PIN_AC25 -to out3[3]
+set_location_assignment PIN_AB28 -to out3[4]
+set_location_assignment PIN_AB25 -to out3[5]
+set_location_assignment PIN_AB22 -to out3[6]
+set_location_assignment PIN_AB23 -to out4[0]
+set_location_assignment PIN_AE29 -to out4[1]
+set_location_assignment PIN_AD29 -to out4[2]
+set_location_assignment PIN_AC28 -to out4[3]
+set_location_assignment PIN_AD30 -to out4[4]
+set_location_assignment PIN_AC29 -to out4[5]
+set_location_assignment PIN_AC30 -to out4[6]
+set_location_assignment PIN_Y21 -to Flags[4]
+set_location_assignment PIN_W21 -to Flags[3]
+set_location_assignment PIN_W20 -to Flags[2]
+set_location_assignment PIN_Y19 -to Flags[1]
+set_location_assignment PIN_W19 -to Flags[0]
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
