--- a/RegFile/RegFile_Lab2_3710.qsf
+++ b/RegFile/RegFile_Lab2_3710.qsf
@@ -60,6 +60,9 @@ set_global_assignment -name EDA_TEST_BENCH_NAME tb_RegFile -section_id eda_simul
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id tb_RegFile
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME tb_RegFile -section_id tb_RegFile
 set_global_assignment -name EDA_TEST_BENCH_FILE tb_RegFile.v -section_id tb_RegFile
+set_global_assignment -name VERILOG_FILE RegFile_wrapper.v
+set_global_assignment -name VERILOG_FILE RegFile_Alu.v
+set_global_assignment -name VERILOG_FILE ../ALU/ALU.v
 set_global_assignment -name VERILOG_FILE RegFile.v
 set_global_assignment -name VERILOG_FILE tb_RegFile.v
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
