--- a/RegFile/RegFile_Lab2_3710.qsf
+++ b/RegFile/RegFile_Lab2_3710.qsf
@@ -101,16 +101,16 @@ set_global_assignment -name VERILOG_FILE FSM.v
 set_global_assignment -name VERILOG_FILE tb_FSM.v
 set_global_assignment -name VERILOG_FILE FSM_Reg_Alu.v
 set_location_assignment PIN_W15 -to rst
-set_location_assignment PIN_K14 -to btn_clk
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_location_assignment PIN_Y16 -to btn_clk
 set_global_assignment -name VERILOG_FILE tb_FSM_Reg_Alu.v
-set_global_assignment -name EDA_TEST_BENCH_FILE tb_RegFile_wrapper.v -section_id tb_RegFile_wrapper
-set_global_assignment -name EDA_TEST_BENCH_FILE tb_RegFile_Alu.v -section_id tb_RegFile_Alu
-set_global_assignment -name EDA_TEST_BENCH_FILE tb_FSM.v -section_id tb_FSM
 set_global_assignment -name EDA_TEST_BENCH_NAME tb_FSM_Reg_Alu -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id tb_FSM_Reg_Alu
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME tb_FSM_Reg_Alu -section_id tb_FSM_Reg_Alu
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name EDA_TEST_BENCH_FILE tb_RegFile_wrapper.v -section_id tb_RegFile_wrapper
+set_global_assignment -name EDA_TEST_BENCH_FILE tb_RegFile_Alu.v -section_id tb_RegFile_Alu
+set_global_assignment -name EDA_TEST_BENCH_FILE tb_FSM.v -section_id tb_FSM
 set_global_assignment -name EDA_TEST_BENCH_FILE tb_FSM_Reg_Alu.v -section_id tb_FSM_Reg_Alu
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
