--- a/RegFile/RegFile_Lab2_3710.qsf
+++ b/RegFile/RegFile_Lab2_3710.qsf
@@ -110,6 +110,7 @@ set_global_assignment -name EDA_TEST_BENCH_FILE tb_RegFile_wrapper.v -section_id
 set_global_assignment -name EDA_TEST_BENCH_FILE tb_RegFile_Alu.v -section_id tb_RegFile_Alu
 set_global_assignment -name EDA_TEST_BENCH_FILE tb_FSM.v -section_id tb_FSM
 set_global_assignment -name EDA_TEST_BENCH_FILE tb_FSM_Reg_Alu.v -section_id tb_FSM_Reg_Alu
+set_global_assignment -name VERILOG_FILE FSM.v
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
