--- a/RAM/RAM.qsf
+++ b/RAM/RAM.qsf
@@ -38,7 +38,7 @@
 
 set_global_assignment -name FAMILY "Cyclone V"
 set_global_assignment -name DEVICE 5CSEMA5F31C6
-set_global_assignment -name TOP_LEVEL_ENTITY FSM_RAM
+set_global_assignment -name TOP_LEVEL_ENTITY FSM_RAM_Wrapper
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 18.1.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "17:56:36  SEPTEMBER 25, 2021"
 set_global_assignment -name LAST_QUARTUS_VERSION "18.1.0 Lite Edition"
@@ -71,7 +71,37 @@ set_global_assignment -name EDA_TEST_BENCH_NAME tb_FSM_RAM -section_id eda_simul
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id tb_FSM_RAM
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME tb_FSM_RAM -section_id tb_FSM_RAM
 set_global_assignment -name EDA_TEST_BENCH_FILE tb_FSM_RAM.v -section_id tb_FSM_RAM
+set_global_assignment -name VERILOG_FILE FSM_RAM_Wrapper.v
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_location_assignment PIN_Y16 -to btn_clk
+set_location_assignment PIN_AA25 -to out1[6]
+set_location_assignment PIN_AA26 -to out1[5]
+set_location_assignment PIN_AB26 -to out1[4]
+set_location_assignment PIN_AB27 -to out1[3]
+set_location_assignment PIN_Y27 -to out1[2]
+set_location_assignment PIN_AA28 -to out1[1]
+set_location_assignment PIN_V25 -to out1[0]
+set_location_assignment PIN_W25 -to out2[6]
+set_location_assignment PIN_V23 -to out2[5]
+set_location_assignment PIN_W24 -to out2[4]
+set_location_assignment PIN_W22 -to out2[3]
+set_location_assignment PIN_Y24 -to out2[2]
+set_location_assignment PIN_Y23 -to out2[1]
+set_location_assignment PIN_AA24 -to out2[0]
+set_location_assignment PIN_AB22 -to out3[6]
+set_location_assignment PIN_AB25 -to out3[5]
+set_location_assignment PIN_AB28 -to out3[4]
+set_location_assignment PIN_AC25 -to out3[3]
+set_location_assignment PIN_AD25 -to out3[2]
+set_location_assignment PIN_AC27 -to out3[1]
+set_location_assignment PIN_AD26 -to out3[0]
+set_location_assignment PIN_AC30 -to out4[6]
+set_location_assignment PIN_AC29 -to out4[5]
+set_location_assignment PIN_AD30 -to out4[4]
+set_location_assignment PIN_AC28 -to out4[3]
+set_location_assignment PIN_AD29 -to out4[2]
+set_location_assignment PIN_AE29 -to out4[1]
+set_location_assignment PIN_AB23 -to out4[0]
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
