Working pin assignments and FPGA

--- a/RAM/RAM.qsf
+++ b/RAM/RAM.qsf
@@ -73,35 +73,49 @@ set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME tb_FSM_RAM -section_id tb
 set_global_assignment -name EDA_TEST_BENCH_FILE tb_FSM_RAM.v -section_id tb_FSM_RAM
 set_global_assignment -name VERILOG_FILE FSM_RAM_Wrapper.v
 set_location_assignment PIN_Y16 -to btn_clk
-set_location_assignment PIN_AA25 -to out1[6]
-set_location_assignment PIN_AA26 -to out1[5]
-set_location_assignment PIN_AB26 -to out1[4]
-set_location_assignment PIN_AB27 -to out1[3]
-set_location_assignment PIN_Y27 -to out1[2]
-set_location_assignment PIN_AA28 -to out1[1]
-set_location_assignment PIN_V25 -to out1[0]
-set_location_assignment PIN_W25 -to out2[6]
-set_location_assignment PIN_V23 -to out2[5]
-set_location_assignment PIN_W24 -to out2[4]
-set_location_assignment PIN_W22 -to out2[3]
-set_location_assignment PIN_Y24 -to out2[2]
-set_location_assignment PIN_Y23 -to out2[1]
-set_location_assignment PIN_AA24 -to out2[0]
-set_location_assignment PIN_AB22 -to out3[6]
-set_location_assignment PIN_AB25 -to out3[5]
-set_location_assignment PIN_AB28 -to out3[4]
-set_location_assignment PIN_AC25 -to out3[3]
-set_location_assignment PIN_AD25 -to out3[2]
-set_location_assignment PIN_AC27 -to out3[1]
-set_location_assignment PIN_AD26 -to out3[0]
-set_location_assignment PIN_AC30 -to out4[6]
-set_location_assignment PIN_AC29 -to out4[5]
-set_location_assignment PIN_AD30 -to out4[4]
-set_location_assignment PIN_AC28 -to out4[3]
-set_location_assignment PIN_AD29 -to out4[2]
-set_location_assignment PIN_AE29 -to out4[1]
-set_location_assignment PIN_AB23 -to out4[0]
 set_global_assignment -name VERILOG_FILE FSM_advanced.v
+set_location_assignment PIN_AE26 -to out3B[0]
+set_location_assignment PIN_AE27 -to out3B[1]
+set_location_assignment PIN_AE28 -to out3B[2]
+set_location_assignment PIN_AG27 -to out3B[3]
+set_location_assignment PIN_AF28 -to out3B[4]
+set_location_assignment PIN_AG28 -to out3B[5]
+set_location_assignment PIN_AH28 -to out3B[6]
+set_location_assignment PIN_AD26 -to out3A[0]
+set_location_assignment PIN_AC27 -to out3A[1]
+set_location_assignment PIN_AD25 -to out3A[2]
+set_location_assignment PIN_AC25 -to out3A[3]
+set_location_assignment PIN_AB28 -to out3A[4]
+set_location_assignment PIN_AB25 -to out3A[5]
+set_location_assignment PIN_AB22 -to out3A[6]
+set_location_assignment PIN_AJ29 -to out2B[0]
+set_location_assignment PIN_AH29 -to out2B[1]
+set_location_assignment PIN_AH30 -to out2B[2]
+set_location_assignment PIN_AG30 -to out2B[3]
+set_location_assignment PIN_AF29 -to out2B[4]
+set_location_assignment PIN_AF30 -to out2B[5]
+set_location_assignment PIN_AD27 -to out2B[6]
+set_location_assignment PIN_AA24 -to out2A[0]
+set_location_assignment PIN_Y23 -to out2A[1]
+set_location_assignment PIN_Y24 -to out2A[2]
+set_location_assignment PIN_W22 -to out2A[3]
+set_location_assignment PIN_W24 -to out2A[4]
+set_location_assignment PIN_V23 -to out2A[5]
+set_location_assignment PIN_W25 -to out2A[6]
+set_location_assignment PIN_AB23 -to out1B[0]
+set_location_assignment PIN_AE29 -to out1B[1]
+set_location_assignment PIN_AD29 -to out1B[2]
+set_location_assignment PIN_AC28 -to out1B[3]
+set_location_assignment PIN_AD30 -to out1B[4]
+set_location_assignment PIN_AC29 -to out1B[5]
+set_location_assignment PIN_AC30 -to out1B[6]
+set_location_assignment PIN_V25 -to out1A[0]
+set_location_assignment PIN_AA28 -to out1A[1]
+set_location_assignment PIN_Y27 -to out1A[2]
+set_location_assignment PIN_AB27 -to out1A[3]
+set_location_assignment PIN_AB26 -to out1A[4]
+set_location_assignment PIN_AA26 -to out1A[5]
+set_location_assignment PIN_AA25 -to out1A[6]
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
