--- a/RAM/RAM.qsf
+++ b/RAM/RAM.qsf
@@ -38,7 +38,7 @@
 
 set_global_assignment -name FAMILY "Cyclone V"
 set_global_assignment -name DEVICE 5CSEMA5F31C6
-set_global_assignment -name TOP_LEVEL_ENTITY FSM_RAM_Wrapper
+set_global_assignment -name TOP_LEVEL_ENTITY RAM
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 18.1.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "17:56:36  SEPTEMBER 25, 2021"
 set_global_assignment -name LAST_QUARTUS_VERSION "18.1.0 Lite Edition"
@@ -54,7 +54,7 @@ set_global_assignment -name VERILOG_FILE tb_RAM_block.v
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
-set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH tb_FSM_RAM -section_id eda_simulation
+set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH tb_RAM -section_id eda_simulation
 set_global_assignment -name EDA_TEST_BENCH_NAME tb_RAM_block -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id tb_RAM_block
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME tb_RAM_block -section_id tb_RAM_block
@@ -65,12 +65,9 @@ set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id tb_RAM
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME tb_RAM -section_id tb_RAM
 set_global_assignment -name VERILOG_FILE FSM_RAM.v
 set_global_assignment -name VERILOG_FILE tb_FSM_RAM.v
-set_global_assignment -name EDA_TEST_BENCH_FILE tb_RAM_block.v -section_id tb_RAM_block
-set_global_assignment -name EDA_TEST_BENCH_FILE tb_RAM.v -section_id tb_RAM
 set_global_assignment -name EDA_TEST_BENCH_NAME tb_FSM_RAM -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id tb_FSM_RAM
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME tb_FSM_RAM -section_id tb_FSM_RAM
-set_global_assignment -name EDA_TEST_BENCH_FILE tb_FSM_RAM.v -section_id tb_FSM_RAM
 set_global_assignment -name VERILOG_FILE FSM_RAM_Wrapper.v
 set_location_assignment PIN_Y16 -to btn_clk
 set_global_assignment -name VERILOG_FILE FSM_advanced.v
@@ -119,4 +116,7 @@ set_location_assignment PIN_AA25 -to out1A[6]
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name EDA_TEST_BENCH_FILE tb_RAM_block.v -section_id tb_RAM_block
+set_global_assignment -name EDA_TEST_BENCH_FILE tb_RAM.v -section_id tb_RAM
+set_global_assignment -name EDA_TEST_BENCH_FILE tb_FSM_RAM.v -section_id tb_FSM_RAM
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
