--- a/CPU/CPU.qsf
+++ b/CPU/CPU.qsf
@@ -38,7 +38,7 @@
 
 set_global_assignment -name FAMILY "Cyclone V"
 set_global_assignment -name DEVICE 5CSEMA5F31C6
-set_global_assignment -name TOP_LEVEL_ENTITY RegFile
+set_global_assignment -name TOP_LEVEL_ENTITY CPU_FSM
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 18.1.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "15:50:12  OCTOBER 02, 2021"
 set_global_assignment -name LAST_QUARTUS_VERSION "18.1.0 Lite Edition"
@@ -52,6 +52,10 @@ set_global_assignment -name EDA_OUTPUT_DATA_FORMAT "VERILOG HDL" -section_id eda
 set_global_assignment -name VERILOG_FILE CPU.v
 set_global_assignment -name VERILOG_FILE ../RegFile/RegFile.v
 set_global_assignment -name VERILOG_FILE ../RAM/RAM_block.v
+set_global_assignment -name VERILOG_FILE Program_Counter.v
+set_global_assignment -name VERILOG_FILE ../RegFile/RegFile_Alu.v
+set_global_assignment -name VERILOG_FILE ../ALU/ALU.v
+set_global_assignment -name VERILOG_FILE CPU_FSM.v
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
