--- a/CPU/CPU.qsf
+++ b/CPU/CPU.qsf
@@ -38,7 +38,7 @@
 
 set_global_assignment -name FAMILY "Cyclone V"
 set_global_assignment -name DEVICE 5CSEMA5F31C6
-set_global_assignment -name TOP_LEVEL_ENTITY CPU
+set_global_assignment -name TOP_LEVEL_ENTITY CPU_Wrapper
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 18.1.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "15:50:12  OCTOBER 02, 2021"
 set_global_assignment -name LAST_QUARTUS_VERSION "18.1.0 Lite Edition"
@@ -65,13 +65,44 @@ set_global_assignment -name EDA_TEST_BENCH_NAME tb_CPU_FSM -section_id eda_simul
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id tb_CPU_FSM
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME tb_CPU_FSM -section_id tb_CPU_FSM
 set_global_assignment -name VERILOG_FILE tb_CPU.v
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name EDA_TEST_BENCH_FILE tb_CPU_FSM.v -section_id tb_CPU_FSM
 set_global_assignment -name EDA_TEST_BENCH_NAME tb_CPU -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id tb_CPU
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME tb_CPU -section_id tb_CPU
 set_global_assignment -name EDA_TEST_BENCH_FILE tb_CPU.v -section_id tb_CPU
 set_global_assignment -name VERILOG_FILE ../RAM/RAM.v
+set_global_assignment -name VERILOG_FILE CPU_Wrapper.v
+set_location_assignment PIN_AA15 -to btn_clk
+set_location_assignment PIN_Y16 -to btn_rst
+set_location_assignment PIN_AA25 -to out1A[6]
+set_location_assignment PIN_AA26 -to out1A[5]
+set_location_assignment PIN_AB26 -to out1A[4]
+set_location_assignment PIN_AB27 -to out1A[3]
+set_location_assignment PIN_Y27 -to out1A[2]
+set_location_assignment PIN_AA28 -to out1A[1]
+set_location_assignment PIN_V25 -to out1A[0]
+set_location_assignment PIN_W25 -to out2A[6]
+set_location_assignment PIN_V23 -to out2A[5]
+set_location_assignment PIN_W24 -to out2A[4]
+set_location_assignment PIN_W22 -to out2A[3]
+set_location_assignment PIN_Y24 -to out2A[2]
+set_location_assignment PIN_Y23 -to out2A[1]
+set_location_assignment PIN_AA24 -to out2A[0]
+set_location_assignment PIN_AB22 -to out3A[6]
+set_location_assignment PIN_AB25 -to out3A[5]
+set_location_assignment PIN_AB28 -to out3A[4]
+set_location_assignment PIN_AC25 -to out3A[3]
+set_location_assignment PIN_AD25 -to out3A[2]
+set_location_assignment PIN_AC27 -to out3A[1]
+set_location_assignment PIN_AD26 -to out3A[0]
+set_location_assignment PIN_AC30 -to out4A[6]
+set_location_assignment PIN_AC29 -to out4A[5]
+set_location_assignment PIN_AD30 -to out4A[4]
+set_location_assignment PIN_AC28 -to out4A[3]
+set_location_assignment PIN_AD29 -to out4A[2]
+set_location_assignment PIN_AE29 -to out4A[1]
+set_location_assignment PIN_AB23 -to out4A[0]
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
