--- a/CPU/CPU.qsf
+++ b/CPU/CPU.qsf
@@ -105,4 +105,5 @@ set_location_assignment PIN_AB23 -to out4A[0]
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name VERILOG_FILE sign_extender.v
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
