--- a/VGATest/VGATest.qsf
+++ b/VGATest/VGATest.qsf
@@ -94,4 +94,6 @@ set_global_assignment -name VERILOG_FILE wrapper_VGATest.v
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name QIP_FILE clkDivider.qip
+set_global_assignment -name SIP_FILE clkDivider.sip
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
