--- a/CPU/CPU.qsf
+++ b/CPU/CPU.qsf
@@ -144,4 +144,6 @@ set_location_assignment PIN_C13 -to red[1]
 set_location_assignment PIN_A13 -to red[0]
 set_location_assignment PIN_A11 -to vgaClk
 set_location_assignment PIN_D11 -to vsync
+set_location_assignment PIN_AD7 -to key_clk
+set_location_assignment PIN_AE7 -to key_data
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
